# django-sdtm-export

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: lint-test.yaml
sdtm_export/: annotators.py  generate_metadata.py  sdtm_exporter.py  utils.py  variables.py
test_project/: settings.py
test_project/test_app/: models.py
test_project/test_app/migrations/: 0001_initial.py
test_project/test_app/tests/: example.py  example_sdtm_exporter.py  test_sdtm_exporter.py  test_sdtm_exporter_csv.py  test_sdtm_exporter_json.py
